...
          tabBarIcon: ({ size, color }) => <MapPin size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="orari"
        options={{
          title: 'Orari',
          tabBarIcon: () => <Text style={{ fontSize: 20 }}>🕒</Text>, // emoji icon
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profili',
          tabBarIcon: ({ size, color }) => <User size={size} color={color} />,
        }}
      />
    </Tabs>
  );
}
...
